[gd_scene load_steps=18 format=3 uid="uid://yscxacryvse1"]

[ext_resource type="Script" path="res://src/units/unit.gd" id="1_4rcxq"]
[ext_resource type="Texture2D" uid="uid://bkja5rv4rcecq" path="res://img/enemy_walk/frame0000.png" id="2_w7anb"]
[ext_resource type="Texture2D" uid="uid://nqbph2gstiru" path="res://img/enemy_walk/frame0001.png" id="3_i162v"]
[ext_resource type="Texture2D" uid="uid://bh3o7mh2uex17" path="res://img/enemy_walk/frame0002.png" id="4_1bee2"]
[ext_resource type="Texture2D" uid="uid://cd14q565s2q2o" path="res://img/enemy_walk/frame0003.png" id="5_cxr5c"]
[ext_resource type="PackedScene" uid="uid://bksar5un4lyj0" path="res://src/traits/Movement.tscn" id="7_t4m6d"]
[ext_resource type="PackedScene" uid="uid://cdp31fdwtxi2g" path="res://src/gui/health_bar.tscn" id="8_xtqdo"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="9_85ae5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="10_1ufwa"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="11_wpv6v"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="12_uiodj"]
[ext_resource type="PackedScene" uid="uid://mi838qbrvw2e" path="res://src/gui/highlight.tscn" id="13_2eb5x"]
[ext_resource type="PackedScene" uid="uid://bbdtnbx6jn452" path="res://src/traits/selection.tscn" id="13_gxpib"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lvxpn"]
radius = 26.0
height = 88.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hnsns"]
radius = 242.349

[sub_resource type="SpriteFrames" id="SpriteFrames_4yr7o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w7anb")
}, {
"duration": 1.0,
"texture": ExtResource("3_i162v")
}, {
"duration": 1.0,
"texture": ExtResource("4_1bee2")
}, {
"duration": 1.0,
"texture": ExtResource("5_cxr5c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k5hti"]
radius = 24.0
height = 84.0

[node name="Unit" type="Area2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_4rcxq")

[node name="HealthBar" parent="." instance=ExtResource("8_xtqdo")]
offset_left = -23.0
offset_top = -53.0
offset_right = 25.0
offset_bottom = -43.0

[node name="Selection" parent="." instance=ExtResource("13_gxpib")]
position = Vector2(0, -12)
width = 30
height = 60

[node name="Movement" parent="." instance=ExtResource("7_t4m6d")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_lvxpn")

[node name="ClickArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -12)
collision_layer = 256
collision_mask = 0

[node name="Highlight" parent="ClickArea" instance=ExtResource("13_2eb5x")]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.139

[node name="AggroArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource("CircleShape2D_hnsns")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_4yr7o")
frame_progress = 0.516983

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_k5hti")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("9_85ae5")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("10_1ufwa")
initial_state = NodePath("MovingToKing")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("11_wpv6v")

[node name="EnemyDetected" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("12_uiodj")
to = NodePath("../../AttackChasing")
event = &"found_target"

[node name="AttackChasing" type="Node" parent="StateChart/Root"]
script = ExtResource("10_1ufwa")
initial_state = NodePath("Chasing")

[node name="Shoot" type="Node" parent="StateChart/Root/AttackChasing"]
script = ExtResource("11_wpv6v")

[node name="OutOfRange" type="Node" parent="StateChart/Root/AttackChasing/Shoot"]
script = ExtResource("12_uiodj")
to = NodePath("../../Chasing")
event = &"out_of_range"

[node name="Chasing" type="Node" parent="StateChart/Root/AttackChasing"]
script = ExtResource("11_wpv6v")

[node name="InRange" type="Node" parent="StateChart/Root/AttackChasing/Chasing"]
script = ExtResource("12_uiodj")
to = NodePath("../../Shoot")
event = &"in_range"

[node name="On TargetLost" type="Node" parent="StateChart/Root/AttackChasing"]
script = ExtResource("12_uiodj")
to = NodePath("../../MovingToKing")
event = &"target_lost"

[node name="MovingToKing" type="Node" parent="StateChart/Root"]
script = ExtResource("11_wpv6v")

[node name="AttackKing" type="Node" parent="StateChart/Root/MovingToKing"]
script = ExtResource("12_uiodj")
to = NodePath("../../AttackChasing")
event = &"in_range"

[node name="On FoundTarget" type="Node" parent="StateChart/Root/MovingToKing"]
script = ExtResource("12_uiodj")
to = NodePath("../../AttackChasing")
event = &"found_target"

[node name="On NoKing" type="Node" parent="StateChart/Root/MovingToKing"]
script = ExtResource("12_uiodj")
to = NodePath("../../Idle")
event = &"no_king"

[connection signal="area_entered" from="AggroArea" to="." method="_on_aggro_area_area_entered"]
[connection signal="state_entered" from="StateChart/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/Root/AttackChasing" to="." method="_on_attack_chasing_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/AttackChasing" to="." method="_on_attack_chasing_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/AttackChasing/Shoot" to="." method="_on_shoot_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/AttackChasing/Shoot" to="." method="_on_shoot_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/AttackChasing/Chasing" to="." method="_on_chasing_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/MovingToKing" to="." method="_on_moving_to_king_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/MovingToKing" to="." method="_on_attack_chasing_state_physics_processing"]
