[gd_scene load_steps=11 format=3 uid="uid://yscxacryvse1"]

[ext_resource type="Script" path="res://unit.gd" id="1_4rcxq"]
[ext_resource type="Texture2D" uid="uid://bkja5rv4rcecq" path="res://img/enemy_walk/frame0000.png" id="2_w7anb"]
[ext_resource type="Texture2D" uid="uid://nqbph2gstiru" path="res://img/enemy_walk/frame0001.png" id="3_i162v"]
[ext_resource type="Texture2D" uid="uid://bh3o7mh2uex17" path="res://img/enemy_walk/frame0002.png" id="4_1bee2"]
[ext_resource type="Texture2D" uid="uid://cd14q565s2q2o" path="res://img/enemy_walk/frame0003.png" id="5_cxr5c"]
[ext_resource type="Texture2D" uid="uid://dbrkbbe8a1dbb" path="res://img/markers/select_marker.png" id="6_2vadc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k5hti"]
radius = 24.0
height = 84.0

[sub_resource type="SpriteFrames" id="SpriteFrames_4yr7o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w7anb")
}, {
"duration": 1.0,
"texture": ExtResource("3_i162v")
}, {
"duration": 1.0,
"texture": ExtResource("4_1bee2")
}, {
"duration": 1.0,
"texture": ExtResource("5_cxr5c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hnsns"]
radius = 13.6015

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lvxpn"]
radius = 23.0
height = 84.0

[node name="Unit" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_4rcxq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_k5hti")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_4yr7o")
frame_progress = 0.516983

[node name="Selected" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -13)
scale = Vector2(1.76, 3.37333)
texture = ExtResource("6_2vadc")

[node name="AggroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource("CircleShape2D_hnsns")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1.139

[node name="ClickArea" type="Area2D" parent="."]
position = Vector2(0, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("CapsuleShape2D_lvxpn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 15.76

[connection signal="body_entered" from="AggroArea" to="." method="_on_aggro_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
